after 1 school day update lol

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>TicTacMoe: The Ultimate Revenge</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- <link href="app/styles/hover-min.css" rel="stylesheet"> -->
+
 
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -11,7 +13,71 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-    <body>
-      <h1>Browser Template</h1>
-    </body>
+  <body>
+      <h1>TIC TAC MOE</h1>
+      <h4>Battle of the Brains</h4>
+      <div class="alltheforms"><button></button>
+        <section id="auth-display"></section>
+        <form id="sign-up-form">
+          <input name="credentials[email]" type="email" placeholder="Email">
+          <input name="credentials[password]" type="password" placeholder="password">
+          <input name="credentials[password_confirmation]" type="password" placeholder="re-type password">
+          <button type="submit">Sign Up</button>
+        </form>
+        <form id="sign-in-form">
+          <input name="credentials[email]" type="email" placeholder="Email">
+          <input name="credentials[password]" type="password" placeholder="Password">
+          <button type="submit">Sign In</button>
+        </form>
+        <h6>Sign Out</h6>
+        <button id="leave" class="sign-out">(ಡ‸ಡ)</button>
+        <section id="message"></section>
+      </div>
+      <div class="container">
+        <h2>─=≡Σ((( つ＞＜)つ</h2>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          <div class="col-4 box btn btn-primary" button type="button"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+        </div>
+      </div>
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">big dogg status</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              TESTTESTTESTTEST
+              <div class="row">
+                <div class="col-75">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">save it baebay</button>
+      </div>
+  </body>
 </html>
