--- a/index.html
+++ b/index.html
@@ -29,35 +29,38 @@
           <input name="credentials[password]" type="password" placeholder="Password">
           <button type="submit">Sign In</button>
         </form>
-        <h6>Sign Out</h6>
-        <button id="leave" class="sign-out">(ಡ‸ಡ)</button>
-        <section id="message"></section>
+        <section id="signout"><h6>Sign Out</h6>
+        <button id="leave" class="sign-out">(ಡ‸ಡ)</button></section>
+        <p id="message"></p>
       </div>
       <div class="container">
+        <button id="new" type="submit">NEW GAME</button>
         <h2>─=≡Σ((( つ＞＜)つ</h2>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-          <div class="col-4 box btn btn-primary" button type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+      <section id="game" class="game">
+        <div class="container">
+          <div class="row">
+            <div data-cell-index="0" id="1" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="1" id="2" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="2" id="3" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="3" id="4"  class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="4" id="5" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="5" id="6" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="6" id="7" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="7" id="8" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index="8" id="9" class="col-4 box btn btn-primary" button type="button"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+          </div>
         </div>
-      </div>
+      </section>
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -66,7 +69,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              TESTTESTTESTTEST
+              OH YEAH THATS AN AWESOME STRATEGY
               <div class="row">
                 <div class="col-75">
                 </div>
