bug fix except none of the bugs are fixed!

--- a/index.html
+++ b/index.html
@@ -40,47 +40,18 @@
       <section id="game" class="game">
         <div class="container">
           <div class="row">
-            <div data-cell-index="0" id="1" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="1" id="2" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="2" id="3" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="3" id="4"  class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="4" id="5" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="5" id="6" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="6" id="7" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="7" id="8" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
-            <div data-cell-index="8" id="9" class="col-4 box btn btn-primary" button type="button"
-              data-bs-toggle="modal" data-bs-target="#exampleModal">	(づ ◕‿◕ )づ</div>
+            <div data-cell-index= "0" id="0" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index= "1" id="1" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index= "2" id="2" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="3" id="3" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="4" id="4" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="5" id="5" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="6" id="6" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="7" id="7" class="col-4 box">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="8" id="8" class="col-4 box">(づ ◕‿◕ )づ</div>
           </div>
         </div>
       </section>
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">big dogg status</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              OH YEAH THATS AN AWESOME STRATEGY
-              <div class="row">
-                <div class="col-75">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">save it baebay</button>
-      </div>
+      <section id="Winner"></section>
   </body>
 </html>
