big update for big ballers who do big things not really big just some silly lil stuffies to add

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </head>
   <body>
       <h1>TIC TAC MOE</h1>
-      <h4>Battle of the Brains</h4>
+      <h4>what if we played a game hehe?</h4>
+      <h5>jk....unless?</h5>
       <div class="alltheforms"><!-- <button></button> -->
         <section id="auth-display"></section>
         <form id="sign-up-form">
@@ -36,20 +37,20 @@
       </div>
       <div class="container">
         <button id="new" type="submit" class="hvr-buzz">NEW GAME</button>
-        <h2>─=≡Σ((( つ＞＜)つ</h2>
+        <h2>(☞°ヮ°)☞ ☜(°ヮ°☜)</h2>
       </div>
       <section id="game" class="game">
         <div class="container">
           <div class="row">
-            <div data-cell-index="0" id="0" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="1" id="1" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="2" id="2" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="3" id="3" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="4" id="4" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="5" id="5" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="6" id="6" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="7" id="7" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
-            <div data-cell-index="8" id="8" class="col-4 box hvr-grow-rotate hvr-buzz">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="0" id="0" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="1" id="1" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="2" id="2" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="3" id="3" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="4" id="4" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="5" id="5" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="6" id="6" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="7" id="7" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
+            <div data-cell-index="8" id="8" class="col-4 box hvr-grow-shadow">(づ ◕‿◕ )づ</div>
           </div>
         </div>
       </section>
