DLC Number 402721 heard you like playing a game that works? well get ready baby because thats happening heck yes.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
   <body>
-      <h1>TIC TAC MOE</h1>
+      <h1 id="winMess">TIC TAC MOE</h1>
       <h4>what if we played a game hehe?</h4>
       <h5>jk....unless?</h5>
       <div class="alltheforms"><!-- <button></button> -->
@@ -37,7 +37,7 @@
       </div>
       <div class="container">
         <button id="new" type="submit" class="hvr-buzz">NEW GAME</button>
-        <h2>(☞°ヮ°)☞ ☜(°ヮ°☜)</h2>
+        <h2 class="milkies">(☞°ヮ°)☞ ☜(°ヮ°☜)</h2>
       </div>
       <section id="game" class="game">
         <div class="container">
